--- a/Lab 9/Lab_9.ipynb
+++ b/Lab 9/Lab_9.ipynb
@@ -277,7 +277,7 @@
     "id": "82c3e73672a0d716"
    },
    "source": [
-    "context_size = 64\n",
+    "context_size = 32\n",
     "split_factor = 0.9\n",
     "split_index = int(split_factor * len(tokenized_text))\n",
     "train = tokenized_text[:split_index].to(device)\n",
@@ -327,7 +327,7 @@
     "\n",
     "train_set = TextDataset(train, context_size)\n",
     "test_set = TextDataset(test, context_size)\n",
-    "batch_size = 300\n",
+    "batch_size = 750\n",
     "train_loader = DataLoader(train_set, batch_size=batch_size, shuffle=True)\n",
     "test_loader = DataLoader(test_set, batch_size=batch_size, shuffle=False)"
    ],
@@ -465,10 +465,17 @@
     "            x = x.unsqueeze(0)\n",
     "\n",
     "        B, N, D = x.shape\n",
-    "        x = x.unsqueeze(1)\n",
-    "        q = x @ self.Wq.unsqueeze(0)\n",
-    "        k = x @ self.Wk.unsqueeze(0)\n",
-    "        v = x @ self.Wv.unsqueeze(0)\n",
+    "        q = []\n",
+    "        k = []\n",
+    "        v = []\n",
+    "        for i in range(self.num_heads):\n",
+    "            q.append(x @ self.Wq[i])\n",
+    "            k.append(x @ self.Wk[i])\n",
+    "            v.append(x @ self.Wv[i])\n",
+    "        q = torch.stack(q, dim=1)\n",
+    "        k = torch.stack(k, dim=1)\n",
+    "        v = torch.stack(v, dim=1)\n",
+    "        \n",
     "        qk =  q @ k.transpose(-2, -1) * (self.d ** -0.5)\n",
     "\n",
     "        if use_mask:\n",
@@ -599,10 +606,10 @@
     "    model.eval()\n",
     "    num_parameters = str(sum(p.numel() for p in model.parameters())/1e6,) + 'M parameters'\n",
     "    wandb.config.update({\"lr\": lr, \n",
-    "                         \"num_blocks\": num_blocks, \n",
-    "                         \"num_heads_per_block\": num_heads_per_block,\n",
-    "                         \"num_epochs\": num_epochs, \n",
-    "                         \"num_parameters\": num_parameters})\n",
+    "                        \"num_blocks\": num_blocks, \n",
+    "                        \"num_heads_per_block\": num_heads_per_block,\n",
+    "                        \"num_epochs\": num_epochs, \n",
+    "                        \"num_parameters\": num_parameters})\n",
     "    print(\"Created new model with {} parameters\".format(num_parameters))\n",
     "    train_loss_evolution = []\n",
     "    for epoch in trange(num_epochs):\n",
