--- a/Lab 9/Lab_9.ipynb
+++ b/Lab 9/Lab_9.ipynb
@@ -22,6 +22,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "1211d69dfabea3c5",
    "metadata": {
     "colab": {
@@ -40,14 +41,14 @@
     "id": "1211d69dfabea3c5",
     "outputId": "96a0a628-f9a8-42cf-d6c3-9463ede66687"
    },
+   "outputs": [],
    "source": [
     "!wget https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
@@ -63,6 +64,7 @@
     },
     "id": "initial_id"
    },
+   "outputs": [],
    "source": [
     "import torch\n",
     "from tqdm import trange\n",
@@ -88,12 +90,11 @@
     "        \"dataset\": \"TinyShakespeare\"\n",
     "    }\n",
     ")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "58d8918bcd4f0a06",
    "metadata": {
     "colab": {
@@ -112,15 +113,14 @@
     "id": "58d8918bcd4f0a06",
     "outputId": "8a342c6e-28ce-4b94-a902-a92cfba530bd"
    },
+   "outputs": [],
    "source": [
     "with open('input.txt') as f:\n",
     "    text = f.read()\n",
     "\n",
     "print(\"----Sample Shakespeare----\")\n",
     "print(text[:100])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,6 +144,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "4aba7e30bedd5646",
    "metadata": {
     "colab": {
@@ -162,6 +163,7 @@
     "id": "4aba7e30bedd5646",
     "outputId": "4ced07b4-2792-4e7d-c5cb-f351a5a7b73a"
    },
+   "outputs": [],
    "source": [
     "def split_to_words(text):\n",
     "    words = []\n",
@@ -178,13 +180,13 @@
     "\n",
     "words = list(set(split_to_words(text)))\n",
     "vocab_size = len(words)\n",
+    "print(\"Number of words: {}\".format(len(split_to_words(text))))\n",
     "print(\"Number of distinct words in text: {}\".format(vocab_size))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "9cacb2e9ced76d25",
    "metadata": {
     "colab": {
@@ -203,6 +205,7 @@
     "id": "9cacb2e9ced76d25",
     "outputId": "bff09c8f-6079-4f04-e5bf-d4903f546256"
    },
+   "outputs": [],
    "source": [
     "# Use index to map words to integer\n",
     "stoi = {word:i for i, word in enumerate(words)}\n",
@@ -217,12 +220,11 @@
     "print(\"Original text: {}\".format(\"\".join(sample_words)))\n",
     "print(\"Encoded text: {}\".format(words_to_tokens(sample_words)))\n",
     "print(\"Decoded text: {}\".format(tokens_to_words(words_to_tokens(sample_words))))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "1d146ef59a76b0ca",
    "metadata": {
     "colab": {
@@ -241,14 +243,13 @@
     "id": "1d146ef59a76b0ca",
     "outputId": "163b4b47-a35f-455c-bb96-be8961351615"
    },
+   "outputs": [],
    "source": [
     "tokenized_text = words_to_tokens(split_to_words(text))\n",
     "print(\"Encoded text sample: {}\".format(tokenized_text[:10]))\n",
     "print(tokens_to_words(tokenized_text[:10]))\n",
     "tokenized_text = torch.tensor(tokenized_text)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -262,6 +263,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "82c3e73672a0d716",
    "metadata": {
     "executionInfo": {
@@ -276,15 +278,14 @@
     },
     "id": "82c3e73672a0d716"
    },
+   "outputs": [],
    "source": [
-    "context_size = 32\n",
+    "context_size = 128\n",
     "split_factor = 0.9\n",
     "split_index = int(split_factor * len(tokenized_text))\n",
     "train = tokenized_text[:split_index].to(device)\n",
     "test = tokenized_text[split_index:].to(device)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -298,6 +299,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "31f4e2e10b103e95",
    "metadata": {
     "executionInfo": {
@@ -312,6 +314,7 @@
     },
     "id": "31f4e2e10b103e95"
    },
+   "outputs": [],
    "source": [
     "class TextDataset(Dataset):\n",
     "    def __init__(self, text, context_size):\n",
@@ -327,12 +330,10 @@
     "\n",
     "train_set = TextDataset(train, context_size)\n",
     "test_set = TextDataset(test, context_size)\n",
-    "batch_size = 750\n",
+    "batch_size = 250\n",
     "train_loader = DataLoader(train_set, batch_size=batch_size, shuffle=True)\n",
     "test_loader = DataLoader(test_set, batch_size=batch_size, shuffle=False)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -356,6 +357,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "ccbafd52bae8f505",
    "metadata": {
     "colab": {
@@ -374,6 +376,7 @@
     "id": "ccbafd52bae8f505",
     "outputId": "259b60c1-2103-469c-dc26-0f2889185a5f"
    },
+   "outputs": [],
    "source": [
     "# Create co-occurrence matrix\n",
     "# The co-occurrence matrix X is a VxV (V is our vocab size) symmetric matrix where X_ij is how many times the ith word appears within W words away from the jth word.\n",
@@ -385,12 +388,11 @@
     "    X[tokenized_text[i], words_to_right] += 1.0\n",
     "    X[tokenized_text[i], words_to_left] += 1.0\n",
     "X = X.to(device)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "582e9c67a87949a4",
    "metadata": {
     "executionInfo": {
@@ -405,6 +407,7 @@
     },
     "id": "582e9c67a87949a4"
    },
+   "outputs": [],
    "source": [
     "# Torch has a bug on mps devices so this won't work on MacBooks\n",
     "embedding_dim = 256\n",
@@ -414,9 +417,7 @@
     "L, Q = torch.linalg.eigh(cov)\n",
     "principle_eigv = Q[:, -embedding_dim:].T\n",
     "embeddings = X @ principle_eigv.T # (vocab_size, embedding_dim)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -430,6 +431,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "3gCca0eqy91t",
    "metadata": {
     "executionInfo": {
@@ -444,6 +446,7 @@
     },
     "id": "3gCca0eqy91t"
    },
+   "outputs": [],
    "source": [
     "class Attn(nn.Module):\n",
     "    def __init__(self, num_heads, D):\n",
@@ -488,12 +491,11 @@
     "        out = concat_qkv @ self.Wo.unsqueeze(0)\n",
     "\n",
     "        return out\n"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "2zgrRoCY04CP",
    "metadata": {
     "executionInfo": {
@@ -508,6 +510,7 @@
     },
     "id": "2zgrRoCY04CP"
    },
+   "outputs": [],
    "source": [
     "class DecoderLayer(nn.Module):\n",
     "    def __init__(self, num_heads, D=embedding_dim):\n",
@@ -515,18 +518,18 @@
     "        self.masked_attn = Attn(num_heads, D)\n",
     "        self.norm1 = nn.LayerNorm(embedding_dim)\n",
     "        self.norm2 = nn.LayerNorm(embedding_dim)\n",
-    "        self.linear1 = nn.Linear(embedding_dim, 4 * embedding_dim)\n",
-    "        self.linear2 = nn.Linear(4 * embedding_dim, embedding_dim)\n",
+    "        self.linear1 = nn.Linear(embedding_dim, 3 * embedding_dim)\n",
+    "        self.linear2 = nn.Linear(3 * embedding_dim, embedding_dim)\n",
+    "        self.dropout = nn.Dropout(0.2)\n",
     "    def forward(self, x):\n",
-    "        x = self.masked_attn(self.norm1(x)) + x\n",
-    "        x = self.linear2(F.relu(self.linear1(self.norm2(x)))) + x\n",
-    "        return x"
-   ],
-   "outputs": [],
-   "execution_count": null
+    "        x = x + self.masked_attn(self.norm1(x))\n",
+    "        x = x + self.linear2(F.relu(self.linear1(self.norm2(x))))\n",
+    "        return self.dropout(x)"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "RYUNfNqx0TSw",
    "metadata": {
     "executionInfo": {
@@ -541,6 +544,7 @@
     },
     "id": "RYUNfNqx0TSw"
    },
+   "outputs": [],
    "source": [
     "class LLM(nn.Module):\n",
     "  def __init__(self, num_blocks, num_heads_per_block, D=embedding_dim):\n",
@@ -551,7 +555,7 @@
     "    self.decoder_layers = nn.Sequential(*[DecoderLayer(num_heads_per_block, D) for _ in range(num_blocks)])\n",
     "    self.norm = nn.LayerNorm(embedding_dim)\n",
     "    self.out = nn.Linear(embedding_dim, vocab_size)\n",
-    "\n",
+    "  \n",
     "  def forward(self, tokens):\n",
     "    token_emb = self.token_embedding[tokens]\n",
     "    pos_emb = self.position_embedding(torch.arange(tokens.shape[1], device=device))\n",
@@ -567,12 +571,11 @@
     "      next_token = torch.multinomial(probs, num_samples=1)\n",
     "      input_tokens = torch.cat([input_tokens, next_token], dim=1)\n",
     "    return input_tokens"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "ca5de84fbe5d8ec",
    "metadata": {
     "colab": {
@@ -591,6 +594,7 @@
     "id": "ca5de84fbe5d8ec",
     "outputId": "3aeaaffc-cb81-4b68-b795-1f6263c58a18"
    },
+   "outputs": [],
    "source": [
     "\n",
     "if os.path.exists(\"./model.pt\"):\n",
@@ -608,14 +612,14 @@
     "    wandb.config.update({\"lr\": lr, \n",
     "                        \"num_blocks\": num_blocks, \n",
     "                        \"num_heads_per_block\": num_heads_per_block,\n",
-    "                        \"num_epochs\": num_epochs, \n",
+    "                        \"context_size\": context_size,\n",
+    "                        \"model_summary\": str(model),\n",
     "                        \"num_parameters\": num_parameters})\n",
     "    print(\"Created new model with {} parameters\".format(num_parameters))\n",
     "    train_loss_evolution = []\n",
     "    for epoch in trange(num_epochs):\n",
     "        train_loss = 0\n",
     "        for i, (x, y) in enumerate(train_loader):\n",
-    "            \n",
     "            logits = model(x)\n",
     "            batch_size, _, _ = logits.shape\n",
     "            loss = F.cross_entropy(logits.view(batch_size * context_size, -1), y.view(batch_size * context_size, -1).squeeze())\n",
@@ -625,23 +629,24 @@
     "            train_loss += loss.item()\n",
     "        train_loss_evolution.append(train_loss/len(train_loader))\n",
     "        clear_output()\n",
-    "        print(f\"Epoch {epoch}, Loss {train_loss/len(train_loader)}\")\n",
-    "        run.log({\"epoch_train_loss\": train_loss/len(train_loader)})  \n",
+    "        print(f\"Epoch {epoch+1}, Loss {train_loss/len(train_loader)}\")\n",
+    "        run.log({\"epoch_train_loss\": train_loss/len(train_loader)}) \n",
+    "        wandb.config.update({\"num_epochs\": epoch+1})\n",
     "        plt.plot(train_loss_evolution)\n",
     "        plt.show()\n",
     "    torch.save(model, \"./model.pt\")\n",
-    "    wandb.save('./model.pth')\n",
+    "    wandb.save('./model.pt')\n",
     "    "
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "4e45c455cd8bcd29",
    "metadata": {
     "id": "4e45c455cd8bcd29"
    },
+   "outputs": [],
    "source": [
     "test_loss = 0\n",
     "with torch.no_grad():\n",
@@ -652,12 +657,11 @@
     "        test_loss += loss.item()\n",
     "\n",
     "print(\"Test loss: \", test_loss / len(test_loader))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "Jhoh1INhBePM",
    "metadata": {
     "colab": {
@@ -676,36 +680,16 @@
     "id": "Jhoh1INhBePM",
     "outputId": "88debee9-8b39-46ff-b3e0-d55c5f1fe11f"
    },
+   "outputs": [],
    "source": [
-    "initial = test[132:164].unsqueeze(0)\n",
+    "initial = test[132:132+context_size].unsqueeze(0)\n",
     "generated_text = \"\".join(tokens_to_words(model.generate(initial, max_generate_tokens=1000).squeeze().tolist()))\n",
     "with open(\"output.txt\", \"w\") as text_file:\n",
     "    text_file.write(generated_text)\n",
+    "\n",
     "wandb.save(\"output.txt\")\n",
     "wandb.finish()"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "57PP7f1Iezeo",
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 5,
-     "status": "aborted",
-     "timestamp": 1720920641464,
-     "user": {
-      "displayName": "Varun Chitturi",
-      "userId": "14334239921966396118"
-     },
-     "user_tz": 420
-    },
-    "id": "57PP7f1Iezeo"
-   },
-   "source": [],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
