--- a/Lab 9/Lab_9.ipynb
+++ b/Lab 9/Lab_9.ipynb
@@ -170,10 +170,10 @@
     "import wandb\n",
     "import re\n",
     "device = \"cpu\"\n",
-    "# if torch.backends.mps.is_available():\n",
-    "#     device = \"mps:0\"\n",
-    "# elif torch.cuda.is_available():\n",
-    "#     device = \"cuda:1\" #TODO change back to 0\n",
+    "if torch.backends.mps.is_available():\n",
+    "    device = \"mps:0\"\n",
+    "elif torch.cuda.is_available():\n",
+    "    device = \"cuda:0\" #TODO change back to 0\n",
     "wandb.login()\n",
     "run = wandb.init(\n",
     "    project=\"lab-9-llm\",\n",
