Missing masking explanation

--- a/Lab 9/Lab_9.ipynb
+++ b/Lab 9/Lab_9.ipynb
@@ -2190,24 +2190,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6d42cca3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unmasked B:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.0581,  0.9755, -1.2286,  0.6309, -1.3394],\n",
+       "        [-1.6574, -0.0328,  1.5274,  0.2406,  0.4627],\n",
+       "        [ 1.5186, -0.5992,  1.0793,  1.7953, -0.6273],\n",
+       "        [ 0.9992, -0.1243, -0.8954, -2.6879,  0.8958],\n",
+       "        [ 0.6580,  1.0629, -0.4115,  0.5600, -1.4186]], device='cuda:0')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mask:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 1., 1., 1., 1.],\n",
+       "        [0., 0., 1., 1., 1.],\n",
+       "        [0., 0., 0., 1., 1.],\n",
+       "        [0., 0., 0., 0., 1.],\n",
+       "        [0., 0., 0., 0., 0.]], device='cuda:0')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Masked B:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.0581,    -inf,    -inf,    -inf,    -inf],\n",
+       "        [-1.6574, -0.0328,    -inf,    -inf,    -inf],\n",
+       "        [ 1.5186, -0.5992,  1.0793,    -inf,    -inf],\n",
+       "        [ 0.9992, -0.1243, -0.8954, -2.6879,    -inf],\n",
+       "        [ 0.6580,  1.0629, -0.4115,  0.5600, -1.4186]], device='cuda:0')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Masked coefficients of A.T after softmax:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.0000, 0.1646, 0.5666, 0.6664, 0.2581],\n",
+       "        [0.0000, 0.8354, 0.0682, 0.2167, 0.3869],\n",
+       "        [0.0000, 0.0000, 0.3652, 0.1002, 0.0886],\n",
+       "        [0.0000, 0.0000, 0.0000, 0.0167, 0.2340],\n",
+       "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0324]], device='cuda:0')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# this is a small example to gain an intuition of how masking will work. \n",
-    "B = torch.randn(5,5)\n",
-    "print(\"B:\")\n",
+    "# B here represents our unnormalized attention coefficients.\n",
+    "B = torch.randn(5,5).to(device)\n",
+    "print(\"Unmasked B:\")\n",
     "display(B)\n",
+    "\n",
     "# FUTURE MASKING: \n",
     "# To mask attention, we create a matrix that indicates if an entry in B is a word in the future\n",
-    "mask = torch.triu(torch.ones(T, T), diagonal=1).to(device)\n",
-    "print()\n",
+    "# torch.triu creates an upper triangular matrix (with the diagonal offset by 1)\n",
+    "mask = torch.triu(torch.ones(5,5), diagonal=1).to(device)\n",
+    "print(\"Mask:\")\n",
+    "display(mask)\n",
     "\n",
     "# If an entry is in the future, we set it to -inf, \n",
     "# so that when we apply softmax, the probability of that word is 0, while \n",
     "# the rest of the words sum to 1.\n",
-    "B = B.masked_fill(mask == 1, float('-inf'))"
+    "B = B.masked_fill(mask == 1, float('-inf'))\n",
+    "print(\"Masked B:\")\n",
+    "display(B)\n",
+    "\n",
+    "# Each column of A.T sums to 1. Furthermore, the first column of A.t() \n",
+    "# is all zeros except for the first entry, the second column is all zeros except for the first two entries, and so on.\n",
+    "# When we multiply VX x A.t(), we are concentrating attention. \n",
+    "A = F.softmax(B, dim=-1)\n",
+    "print(\"Masked coefficients of A.t() after softmax:\")\n",
+    "display(A.t())"
    ]
   },
   {
